--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@
                 <h3>Fanart used:</h3>
                 <div class="list">
                     <div class="flex">
-                        <img src="img/Manny.JPG"/>
+                        <img src="img/Manny.jpg"/>
                         <div><p>Manny</p><p>By our Lord and Savior <a href="https://moringmark.tumblr.com/">Moringmark</a></p></div>
+                    </div>
+		    <div class="flex">
+                        <img src="img/Mark.JPG"/>
+                        <div><p>Moringmark</p><p>By our Lord and Savior <a href="https://moringmark.tumblr.com/">Moringmark</a></p></div>
                     </div>
                     <div class="flex">
                         <a href="img/Leo.jpg" target="_blank"><img class="img_open" src="img/Leo.jpg"/></a>
