--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <div><p>Manny</p><p>By our Lord and Savior <a href="https://moringmark.tumblr.com/">Moringmark</a></p></div>
                     </div>
 		    <div class="flex">
-                        <img src="img/Mark.JPG"/>
+                        <img src="img/Mark.jpg"/>
                         <div><p>Moringmark</p><p>By our Lord and Savior <a href="https://moringmark.tumblr.com/">Moringmark</a></p></div>
                     </div>
                     <div class="flex">
