--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
                 <div class="list">
                     <div class="flex">
                         <img src="img/Manny.jpg"/>
-                        <div><p>Manny</p><p>By our Lord and Savior <a href="https://moringmark.tumblr.com/">Moringmark</a></p></div>
+                        <div><p>Manny</p><p>By our Lord and Savior <a target="_blank" href="https://moringmark.tumblr.com/">Moringmark</a></p></div>
                     </div>
 		    <div class="flex">
                         <img src="img/Mark.jpg"/>
-                        <div><p>Moringmark</p><p>By our Lord and Savior <a href="https://moringmark.tumblr.com/">Moringmark</a></p></div>
+                        <div><p>Moringmark</p><p>By our Lord and Savior <a target="_blank" href="https://moringmark.tumblr.com/">Moringmark</a></p></div>
                     </div>
                     <div class="flex">
                         <a href="img/Leo.jpg" target="_blank"><img class="img_open" src="img/Leo.jpg"/></a>
                         <div><p>Leo by Thomathy</p><p>A witchwolf puppy and son of Luz, character from 
-                        <a href="https://archiveofourown.org/series/2065347" >Rainbow Hair Clip series by I_Make_Arrows</a></p></div>
+                        <a target="_blank" href="https://archiveofourown.org/series/2065347" >Rainbow Hair Clip series by I_Make_Arrows</a></p></div>
                     </div>
                     <div class="flex">
                         <a href="img/Surge.jpg" target="_blank"><img class="img_open" src="img/Surge.jpg"/></a>
                         <div><p>Surge by Thomathy</p><p>The ancient witchwolf of Bonewilds coven and close friend of Lilith, character from 
-                        <a href="https://archiveofourown.org/series/2065347" >Rainbow Hair Clip series by I_Make_Arrows</a></p></div>
+                        <a target="_blank" href="https://archiveofourown.org/series/2065347" >Rainbow Hair Clip series by I_Make_Arrows</a></p></div>
                     </div>
                     <p>Game created by Achtung_Panzer aka Kacper</p>
                 </div>
