--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </article>
     </main>
     <div style="display:none">
-        <img src="img/Surge.jpg"><img src="img/Barcus.jpg"><img src="img/Viney.jpg"><img src="img/Manny.jpg"><img src="img/Bosha.jpg"><img src="img/Titan-Luz.jpg"><img src="img/Golden.jpg"><img src="img/Jerbo.jpg"><img src="img/Belos.jpg"><img src="img/Alador.jpg"><img src="img/Raine.jpg"><img src="img/Amity.jpg"><img src="img/Steve.jpg"><img src="img/Collector.jpg"><img src="img/Skara.jpg"><img src="img/Bump.jpg"><img src="img/Darius.jpg"><img src="img/Leo.jpg"><img src="img/Titan.jpg"><img src="img/Hooty.jpg">
+        <img src="img/Surge.jpg"><img src="img/Barcus.jpg"><img src="img/Viney.jpg"><img src="img/Manny.jpg"><img src="img/Bosha.jpg"><img src="img/TitanLuz.jpg"><img src="img/Golden.jpg"><img src="img/Jerbo.jpg"><img src="img/Belos.jpg"><img src="img/Alador.jpg"><img src="img/Raine.jpg"><img src="img/Amity.jpg"><img src="img/Steve.jpg"><img src="img/Collector.jpg"><img src="img/Skara.jpg"><img src="img/Bump.jpg"><img src="img/Darius.jpg"><img src="img/Leo.jpg"><img src="img/Titan.jpg"><img src="img/Hooty.jpg">
         <img src="img/Mark.jpg"><img src="img/Em.jpg"><img src="img/Hooty.jpg"><img src="img/Eda.jpg"><img src="img/Flapjack.jpg"><img src="img/Surge.jpg"><img src="img/Clover.jpg"><img src="img/King.jpg"><img src="img/Lilith.jpg"><img src="img/Stringbean.jpg"><img src="img/Ed.jpg"><img src="img/Ghost.jpg">
         <img src="img/Vee.jpg"><img src="img/Camila.jpg"><img src="img/Luz.jpg"><img src="img/Masha.jpg"><img src="img/Amity.jpg"><img src="img/Willow.jpg"><img src="img/Hunter.jpg"><img src="img/Gus.jpg">
      </div>
